--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" type="img/ico" href="/img/favicon.png">
+        <link rel="stylesheet" type="text/css" href="/styles.css">
         <Title>Decision Maker App</Title>
     </head>
     <body>
